add branch second

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="game_start start_blue">开始游戏</div>
 		</div>
 		<div class="playing">
-			<div class="score">100000000</div>
+			<div class="score">0</div>
 		</div>
 		<div class="mask"></div>
 		<div class="end">
@@ -45,5 +45,6 @@
 			<div class="resume">重新开始</div>
 		</div>
 	</div>
+	<script src="js/index.js"></script>
 </body>
 </html>
