--- a/index.html
+++ b/index.html
@@ -1,50 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Flappy Bird</title>
-	<link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="css/reset.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-	<div id="game">
-		<div class="start">
-			<div class="bird"></div>
-			<div class="game_start start_blue">开始游戏</div>
-		</div>
-		<div class="playing">
-			<div class="score">0</div>
-		</div>
-		<div class="mask"></div>
-		<div class="end">
-			<div class="gameover">Game over</div>
-			<div class="yourresult">Your Results:</div>
-			<div class="last_score">100</div>
-			<ul class="rank_list">
-				<li class="rank_item ">
-					<span class="score_item_degree first">1</span>
-					<span class="score_item_score">500</span>
-					<span class="score_item_time">2020.8.16 18:47:12</span>
-				</li>
-				<li class="rank_item">
-					<span class="score_item_degree second">1</span>
-					<span class="score_item_score">5</span>
-					<span class="score_item_time">2020.8.16 18:47:12</span>
-				</li>
-				<li class="rank_item">
-					<span class="score_item_degree third">1</span>
-					<span class="score_item_score">5</span>
-					<span class="score_item_time">2020.8.16 18:47:12</span>
-				</li>
-				<li class="rank_item">
-					<span class="score_item_degree">1</span>
-					<span class="score_item_score">5</span>
-					<span class="score_item_time">2020.8.16 18:47:12</span>
-				</li>
-			</ul>
-			<div class="resume">重新开始</div>
-		</div>
-	</div>
-	<script src="js/index.js"></script>
+  <div id="game">
+    <div class="bird"></div>
+    <div class="start start-blue">开始游戏</div>
+    <div class="score">0</div>
+    <div class="mask"></div>
+    <div class="end">
+      <div class="over">Game over</div>
+      <div class="result">Your Results:</div>
+      <div class="final-score">0</div>
+      <ul class="rank-list">
+      </ul>
+      <div class="restart">重新开始</div>
+    </div>
+  </div>
+
+  <script src="./js/utils.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
